--- a/call_smartfarmbigdata.ipynb
+++ b/call_smartfarmbigdata.ipynb
@@ -4033,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "489d3816",
    "metadata": {},
    "outputs": [
@@ -4041,7 +4041,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ 환경 정보 실패: PFS_0000002_01, 2016-02-14, IR → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PFS_0000002_01/2016-02-14/FG/EI/IR/080300\n"
+      "❌ 환경 정보 실패: PFS_0000002_01, 2016-02-14, IR → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PFS_0000002_01/2016-02-14/FG/EI/IR/080300\n",
+      "❌ 환경 정보 실패: PFS_0000008_01, 2021-12-15, HI → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PFS_0000008_01/2021-12-15/FG/EI/HI/090100\n",
+      "❌ 환경 정보 실패: PF_0002528_01, 2022-06-29, IS → HTTPSConnectionPool(host='www.smartfarmkorea.net', port=443): Read timed out. (read timeout=10)\n",
+      "❌ 환경 정보 실패: PF_0002528_01, 2018-10-29, DT → HTTPSConnectionPool(host='www.smartfarmkorea.net', port=443): Read timed out. (read timeout=10)\n",
+      "❌ 환경 정보 실패: PF_0002528_01, 2019-04-22, TI → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0002528_01/2019-04-22/FG/EI/TI/080300\n",
+      "❌ 환경 정보 실패: PF_0002551_01, 2018-11-20, ID → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0002551_01/2018-11-20/FG/EI/ID/080300\n",
+      "❌ 환경 정보 실패: PF_0010014_01, 2019-10-26, HI02 → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0010014_01/2019-10-26/FG/EI/HI02/080300\n",
+      "❌ 환경 정보 실패: PF_0010014_01, 2019-11-03, ID → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0010014_01/2019-11-03/FG/EI/ID/080300\n",
+      "❌ 환경 정보 실패: PF_0010014_01, 2020-01-19, LI → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0010014_01/2020-01-19/FG/EI/LI/080300\n",
+      "❌ 환경 정보 실패: PF_0021269_01, 2017-01-01, ID → 502 Server Error: Bad Gateway for url: https://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/94cec237e4b943bfbb0e499d779025df/PF_0021269_01/2017-01-01/FG/EI/ID/080300\n"
      ]
     }
    ],
