remove all datas to commit list

--- a/call_smartfarmbigdata.ipynb
+++ b/call_smartfarmbigdata.ipynb
@@ -3420,7 +3420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "89ca8813",
    "metadata": {},
    "outputs": [
@@ -4022,7 +4022,7 @@
     "            print(f\"❌ {completed}/{total} | 생육 데이터 없음\")\n",
     "\n",
     "# JSON 저장\n",
-    "with open(\"tomato_cultivate_data_valid.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/tomato_cultivate_data_valid.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(valid_entries, f, ensure_ascii=False, indent=2)\n",
     "\n",
     "# 요약 출력\n",
@@ -4033,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "489d3816",
    "metadata": {},
    "outputs": [
@@ -4108,7 +4108,7 @@
     "                    })\n",
     "\n",
     "# 4. 저장\n",
-    "with open(\"tomato_env_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/tomato_env_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(env_entries, f, ensure_ascii=False, indent=2)\n",
     "\n"
    ]
