--- a/data_visualization.ipynb
+++ b/data_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "53c60ed2",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# import file\n",
-    "with open(\"tomato_cropping_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"./data/tomato_cropping_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    raw_data = json.load(f)\n",
     "\n",
     "# Expanding userId + croppingData inside field to one row\n",
