--- a/call_smartfarmbigdata.ipynb
+++ b/call_smartfarmbigdata.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "17fcd56f",
+   "execution_count": 2,
+   "id": "15c0ff96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,16 @@
     "import json\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from urllib.parse import quote\n",
-    "\n",
+    "from urllib.parse import quote\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fcd56f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# .env에서 API 키 불러오기\n",
     "load_dotenv()\n",
     "service_key = quote(os.getenv(\"SMARTFARM_API_KEY\").strip(), safe='')\n",
@@ -4034,6 +4042,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "81883943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user id with growth data \n",
+    "# save code\n",
+    "\n",
+    "\n",
+    "# 온도의 변화가 mild 하게 했는지를 먼저 확인\n",
+    "# VPD변환\n",
+    "\n",
+    "# 외기, 내기온도 \n",
+    "# 일사량 높아 - 창 열고, 스크린\n",
+    "\n",
+    "# call api with that growers\n",
+    "\n",
+    "# import control data \n",
+    "# CR_CODEs = []\n",
+    "\n",
+    "# lee side // wind side\n",
+    "# P-value PID (propotional)\n",
+    "# wind = lee 1:10\n",
+    "\n",
+    "# vpd range - 일반적인 작물 재배 range 안에 속하는지 \n",
+    "# 농가별로 RTR (radiation temperature ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "489d3816",
    "metadata": {},
    "outputs": [
@@ -4112,6 +4150,129 @@
     "    json.dump(env_entries, f, ensure_ascii=False, indent=2)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da7fef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'identity_data.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 46\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/tomato_cultivate_data_valid.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     44\u001b[0m     grow_data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m---> 46\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43midentity_data.json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     47\u001b[0m     identity_data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# 2. userId → facilityId 매핑\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/torch/lib/python3.10/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'identity_data.json'"
+     ]
+    }
+   ],
+   "source": [
+    "# 제어 데이터 수집 (CR - Control)\n",
+    "# 사용자가 요청한 CR 분류코드들\n",
+    "CR_CODES = [\n",
+    "    \"CC01\",           # 전장\n",
+    "    \"CC01_1_B_C\",     # 후축일중전장 작동상태\n",
+    "    \"CC01_1_B_O\",     # 후축일중전장 작동어부\n",
+    "    \"CC01_1_B_S\",     # 후축일중전장 설정정보\n",
+    "    \"CC01_1_B_S_1\",   # 후축일중전장 설정온도\n",
+    "    \"CC01_1_B_S_2\",   # 후축일중전장 열림값\n",
+    "    \"CC01_1_B_S_3\",   # 후축일중전장 닫힘값\n",
+    "    \"CC01_1_B_S_4\",   # 후축일중전장 온도폭\n",
+    "    \"CC01_1_B_T\",     # 후축일중전장 작동시간\n",
+    "    \"CC01_1_B_V\",     # 후축일중전장 개도\n",
+    "    \"CC01_1_F_C\",     # 전축일중전장 작동상태\n",
+    "    \"CC01_1_F_O\",     # 전축일중전장 작동어부\n",
+    "    \"CC01_1_F_S\",     # 전축일중전장 설정정보\n",
+    "    \"CC01_1_F_S_1\",   # 전축일중전장 설정온도\n",
+    "    \"CC01_1_F_S_2\",   # 전축일중전장 열림값\n",
+    "    \"CC01_1_F_S_3\",   # 전축일중전장 닫힘값\n",
+    "    \"CC01_1_F_S_4\",   # 전축일중전장 온도폭\n",
+    "    \"CC01_1_F_T\",     # 전축일중전장 작동시간\n",
+    "    \"CC01_1_F_V\",     # 전축일중전장 개도\n",
+    "    \"CC01_1_L_C\",     # 좌축일중전장 작동상태\n",
+    "    \"CC01_1_L_O\",     # 좌축일중전장 작동어부\n",
+    "    \"CC01_1_L_S\",     # 좌축일중전장 설정정보\n",
+    "]\n",
+    "\n",
+    "def get_control_data(service_key, facility_id, meas_date, item_code, fatr_code,\n",
+    "                     fld_code=\"FG\", sect_code=\"CR\"):\n",
+    "    \"\"\"제어 데이터 수집 함수\"\"\"\n",
+    "    url = f\"http://www.smartfarmkorea.net/Agree_WS/webservices/ProvideRestService/getEnvDataList/\" \\\n",
+    "          f\"{service_key}/{facility_id}/{meas_date}/{fld_code}/{sect_code}/{fatr_code}/{item_code}\"\n",
+    "    try:\n",
+    "        response = requests.get(url, timeout=10)\n",
+    "        response.raise_for_status()\n",
+    "        data = response.json()\n",
+    "        return data if data else None\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ 제어 정보 실패: {facility_id}, {meas_date}, {fatr_code} → {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# 1. 기존 생육 데이터 로드\n",
+    "with open(\"./data/tomato_cultivate_data_valid.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    grow_data = json.load(f)\n",
+    "\n",
+    "with open(\"./data/identity_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    identity_data = json.load(f)\n",
+    "\n",
+    "# 2. userId → facilityId 매핑\n",
+    "user_facility = {d[\"userId\"]: d[\"facilityId\"] for d in identity_data if d.get(\"userId\") and d.get(\"facilityId\")}\n",
+    "\n",
+    "# 3. 제어 데이터 수집\n",
+    "control_entries = []\n",
+    "total_requests = 0\n",
+    "successful_requests = 0\n",
+    "\n",
+    "for entry in grow_data[:5]:  # 예시로 처음 5개 농가만 테스트\n",
+    "    user_id = entry[\"userId\"]\n",
+    "    facility_id = user_facility.get(user_id)\n",
+    "    if not facility_id:\n",
+    "        continue\n",
+    "\n",
+    "    print(f\"📊 {user_id} ({facility_id}) 제어 데이터 수집 중...\")\n",
+    "    \n",
+    "    for grow_point in entry[\"cultivateData\"][:3]:  # 각 농가당 처음 3개 측정일만 테스트\n",
+    "        meas_date = grow_point.get(\"measDate\")  # yyyy-mm-dd\n",
+    "        item_code = grow_point.get(\"itemCode\", \"080300\")\n",
+    "        if meas_date:\n",
+    "            print(f\"  📅 {meas_date} 데이터 수집...\")\n",
+    "            for fatr_code in CR_CODES:\n",
+    "                total_requests += 1\n",
+    "                control_data = get_control_data(service_key, facility_id, meas_date, item_code, fatr_code)\n",
+    "                if control_data:\n",
+    "                    successful_requests += 1\n",
+    "                    control_entries.append({\n",
+    "                        \"userId\": user_id,\n",
+    "                        \"facilityId\": facility_id,\n",
+    "                        \"measDate\": meas_date,\n",
+    "                        \"fatrCode\": fatr_code,\n",
+    "                        \"controlData\": control_data\n",
+    "                    })\n",
+    "                    print(f\"    ✅ {fatr_code} 데이터 수집 성공\")\n",
+    "\n",
+    "# 4. 결과 저장\n",
+    "if control_entries:\n",
+    "    with open(\"./data/tomato_control_data_sample.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(control_entries, f, ensure_ascii=False, indent=2)\n",
+    "    print(f\"\\n🎯 제어 데이터 수집 완료!\")\n",
+    "    print(f\"✅ 성공: {successful_requests}/{total_requests} 요청\")\n",
+    "    print(f\"💾 저장된 항목: {len(control_entries)}개\")\n",
+    "    print(f\"📁 저장 위치: ./data/tomato_control_data_sample.json\")\n",
+    "else:\n",
+    "    print(\"❌ 수집된 제어 데이터가 없습니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c76766",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
